[package]
name = "hash"
description = "Headless autorun"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
license = "MIT/Apache-2.0"
readme = "readme.md"
repository = "https://github.com/dotcypress/hash"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = {version = "4.5.30", features = ["env"]}

[target.'cfg(target_os="linux")'.dependencies]
mount-watcher = "0.5.0"
